# PID-Todo-Backend

./: .env.example  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
app_auth/: backends.py  models.py  serializers.py  urls.py  utils.py  views.py
app_auth/migrations/: 0001_initial.py  0002_user_created_at.py  0003_remove_user_cloud_id_remove_user_cloud_url.py  0004_alter_user_options_alter_user_created_at_and_more.py
app_auth/templates/: email_verification.html  reset_password.html
app_projects/: models.py  serializers.py  urls.py  views.py
app_projects/migrations/: 0001_initial.py  0002_project_updated_at_alter_project_status.py  0003_alter_project_name.py  0004_project_favorite.py  0005_alter_project_options_alter_project_created_at_and_more.py
app_tasks/: models.py  serializers.py  urls.py  views.py
app_tasks/migrations/: 0001_initial.py  0002_alter_tasks_unique_together.py  0003_alter_tasks_options_alter_tasks_created_at_and_more.py
todo_pid/: asgi.py  settings.py  urls.py  wsgi.py
