[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["L1vDev <livdev.rguez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
djangorestframework-simplejwt = "^5.5.0"
django-cloudinary-storage = "^0.3.0"
python-decouple = "^3.8"
python-dotenv = "^1.1.0"
pillow = "^11.1.0"
django-filter = "^25.1"
whitenoise = "^6.9.0"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
